# pg-status

./: .clang-tidy  .env_example  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml  installation_mac.md
docker/alpine/: Dockerfile_shared  Dockerfile_shared_disabled_https  Dockerfile_static
docker/ubuntu/: Dockerfile_deb  Dockerfile_shared  Dockerfile_shared_disabled_https  Dockerfile_static
src/: CMakeLists.txt  main.c
src/http_server/: CMakeLists.txt  http_server.c  http_server.h
src/pg_monitor/: CMakeLists.txt  pg_monitor.c  pg_monitor.h  sql_parameters.c  sql_utils.c
src/utils/: CMakeLists.txt  utils.c  utils.h
test/: docker-compose.yml  haproxy.cfg  pg-proxy-1_is_master.sh  pg-proxy-2_is_master.sh  valgrind_report.txt
test/haproxy-master/: haproxy.cfg
test/haproxy-replica/: Dockerfile  haproxy.cfg
test/master/: Dockerfile  master-entrypoint.sh
test/replica/: Dockerfile  replica-entrypoint.sh
test/valgrind/: Dockerfile
